# video-kit

./: .gitignore  Cargo.toml  README.md  setup-gstreamer.sh
cli/: Cargo.toml  README.md
cli/assets/: backup.json  video-simple.json  video.json
cli/src/: lib.rs
crates/cutting/: Cargo.toml  readme.md
crates/cutting/examples/: poster_generation.rs
crates/cutting/src/: lib.rs  sources.rs
crates/cutting/src/driver/: mod.rs
crates/cutting/src/driver/ffmpeg/: mod.rs
crates/cutting/src/driver/gstreamer/: mod.rs
crates/gpu_processor_bevy/: Cargo.toml  README.md
crates/gpu_processor_bevy/src/: image_format.rs  lib.rs  processor.rs
crates/gpu_processor_bevy/src/shaders/: grayscale.wgsl
crates/gpu_processor_burn/: Cargo.toml  README.md
crates/gpu_processor_burn/examples/: batch_processing.rs  chained_processing.rs  outline.rs
crates/gpu_processor_burn/src/: backend.rs  dataset.rs  kernel.rs  lib.rs  ops.rs
crates/gpu_processor_burn/src/kernels/: fused_pipeline.wgsl  gaussian_blur.wgsl  morphology.wgsl  outline.wgsl  threshold.wgsl
crates/mask/: Cargo.toml  README.md
crates/mask/bindings/: ImageDimensions.ts  MaskOutlineProperties.ts  OutlineResponse.ts
crates/mask/src/: error.rs  lib.rs  manager.rs  types.rs
crates/mask/src/algorithms/: detection.rs  extraction.rs  mod.rs  preprocessing.rs  simplification.rs
crates/mask/src/io/: geojson.rs  mod.rs
crates/mask/src/mcp/: mod.rs
crates/mask/src/pipeline/: builder.rs  mod.rs
crates/mask/src/traits/: mod.rs
crates/mask/src/typed_geojson/: mod.rs
crates/sam-onnx-inference/: .gitignore  Cargo.toml  README.md  pyproject.toml  setup.sh
crates/sam-onnx-inference/scripts/: __init__.py  convert_sam_to_onnx.py
crates/sam-onnx-inference/src/: lib.rs  postprocessing.rs  preprocessing.rs  weights.rs
crates/sam-onnx-inference/src/model/: mask_decoder.rs  mod.rs  prompt_encoder.rs  sam.rs  vit.rs
crates/sam2/: Cargo.toml  README.md
crates/sam2/src/: lib.rs
crates/sam2/src/python/: README.md  colored_masks_example.py  create_loop.py  debug_sam2.py  direct_encoded_example.py  pyproject.toml  run_inference.py  unique_ids_example.py  video_prediction.py
crates/subtitles/: Cargo.toml  README.md
crates/subtitles/examples/: extract_subtitles.rs
crates/subtitles/src/: lib.rs
crates/video_kit_common/: Cargo.toml  README.md
crates/video_kit_common/src/: lib.rs
