[package]
name = "cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cutting = { workspace = true }
subtitles = { workspace = true }
color-eyre = { workspace = true }
# CLI dependencies
clap = { version = "4.4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
# Serialization dependencies
serde = { workspace = true }
serde_json = "1.0"
toml = "0.8"
schemars = { workspace = true }
thiserror = { workspace = true }