[package]
name = "mask"
version = "0.1.0"
edition.workspace = true


[dependencies]
image = { version = "0.25", features = ["jpeg", "png", "tiff"] }
imageproc = "0.24.0"
geo = { workspace = true }
geo-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
geojson = { workspace = true }

# JSON schema generation
schemars = { workspace = true }

# RMCP: Custom protocol library with multiple features enabled
rmcp = { workspace = true }
base64 = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
color-eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }


ts-rs = { workspace = true, features = ["serde-compat", "bytes",  "chrono", "serde_json", "serde-json-impl", "tokio", "url", "uuid", "uuid-impl", "chrono-impl"] }
topojson = { workspace = true }
