[project]
name = "mask"
version = "0.1.0"
description = "Video prediction using SAM2 model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0,<3.0.0",
    "torchvision>=0.15.0,<1.0.0",
    "transformers>=4.35.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "huggingface-hub>=0.16.0",
    "sam-2",
]

[tool.uv.sources]
sam-2 = { git = "https://github.com/facebookresearch/segment-anything-2.git" }
